--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
         theme: {
           extend: {
             colors: {
-              primary: '#3b82f6', // Bright blue for dark mode
-              secondary: '#1f2937',
-              accent: '#22c55e', // Changed to Green
+              glass: 'rgba(255, 255, 255, 0.05)',
+              glassBorder: 'rgba(255, 255, 255, 0.1)',
+            },
+            boxShadow: {
+              'glass': '0 4px 30px rgba(0, 0, 0, 0.1)',
+              'neon-red': '0 0 10px rgba(239, 68, 68, 0.5), 0 0 20px rgba(239, 68, 68, 0.3)',
             }
           }
         }
@@ -20,7 +23,32 @@
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
-      body { font-family: 'Inter', sans-serif; background-color: #111827; color: #f3f4f6; }
+      body { 
+        font-family: 'Inter', sans-serif; 
+        background: radial-gradient(circle at 50% -20%, #2e1065, #172554, #0f172a);
+        background-attachment: fixed;
+        background-size: cover;
+        min-height: 100vh;
+        color: #f3f4f6; 
+      }
+      .glass-panel {
+        background: rgba(255, 255, 255, 0.05);
+        border-radius: 16px;
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+        backdrop-filter: blur(12px);
+        -webkit-backdrop-filter: blur(12px);
+        border: 1px solid rgba(255, 255, 255, 0.1);
+      }
+      .glass-button {
+        background: rgba(255, 255, 255, 0.08);
+        backdrop-filter: blur(4px);
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        transition: all 0.3s ease;
+      }
+      .glass-button:hover {
+        background: rgba(255, 255, 255, 0.15);
+        box-shadow: 0 0 15px rgba(255, 255, 255, 0.1);
+      }
     </style>
   <script type="importmap">
 {
